<resources>
    <string name="app_name">Albums</string>
    <string name="search">Поиск</string>
    <string name="sort_label">Сортировать:</string>
    <string name="clarify">Уточнить</string>
    <string name="show_label">Показать</string>
    <string name="default_label">По умолчанию</string>
    <string name="name_asc_label">По возрастанию имени</string>
    <string name="name_desc_label">По убыванию имени</string>
    <string name="no_internet_label">Отсутсвует интернет соединение. Данные будут загружены из БД</string>
    <string name="save_label">Сохранить фото в галерею</string>
    <string name="error_load_data_label">Ошибка загрузки данных</string>
    <string name="save_success_text">Сохранение фотографии прошло успешно</string>
    <string name="save_fail_text">Фото не удалось сохранить</string>
    <string name="from_text"> из </string>
    <string name="one_from_text">1 из </string>
    <string name="main_text">Главная</string>
    <string name="album_text">Альбом</string>
    <string name="error_save">Ошибка при сохранении фотографии</string>
    <string name="sort_text">Сортировать</string>
    <string name="filters">Фильтр</string>
    <string name="photos">Фото</string>
    <string name="empty_search_text">Извините, ничего не найдено. Попробуйте изменить запрос.</string>
</resources>
